bindings/go/marketdata/marketdata_uniffi.h

// Error definitions
typedef struct RustCallStatus {
	int8_t code;
	RustBuffer errorBuf;
} RustCallStatus;
typedef void (*UniffiRustFutureContinuationCallback)(uint64_t data, int8_t poll_result);
void ffi_marketdata_uniffi_rust_future_poll_void(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_marketdata_uniffi_rust_future_cancel_void(uint64_t handle
);
void ffi_marketdata_uniffi_rust_future_free_void(uint64_t handle
);
void ffi_marketdata_uniffi_rust_future_complete_void(uint64_t handle, RustCallStatus *out_status
);
uint16_t uniffi_marketdata_uniffi_checksum_func_new_rest_client_with_api_key(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_func_new_rest_client_with_bearer_token(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_func_new_rest_client_with_sdk_token(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_func_new_websocket_client(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_func_new_websocket_client_with_endpoint(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_futoptclient_intraday(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_futoptintradayclient_get_products(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_futoptintradayclient_get_quote(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_futoptintradayclient_get_ticker(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_futoptintradayclient_products_sync(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_futoptintradayclient_quote_sync(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_futoptintradayclient_ticker_sync(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_restclient_futopt(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_restclient_stock(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stockclient_intraday(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stockintradayclient_candles_sync(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stockintradayclient_get_candles(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stockintradayclient_get_quote(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stockintradayclient_get_ticker(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stockintradayclient_get_trades(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stockintradayclient_get_volumes(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stockintradayclient_quote_sync(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stockintradayclient_ticker_sync(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stockintradayclient_trades_sync(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stockintradayclient_volumes_sync(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_websocketclient_connect(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_websocketclient_disconnect(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_websocketclient_is_connected(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_websocketclient_subscribe(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_websocketclient_unsubscribe(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_websocketlistener_on_connected(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_websocketlistener_on_disconnected(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_websocketlistener_on_message(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_websocketlistener_on_error(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_constructor_websocketclient_new(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_constructor_websocketclient_new_with_endpoint(void
    
);
uint32_t ffi_marketdata_uniffi_uniffi_contract_version(void
    
);