bindings/java/src/main/java/tw/com/fugle/marketdata/generated/UniffiLib.java

    void ffi_marketdata_uniffi_rust_future_poll_void(Long handle, UniffiRustFutureContinuationCallback callback, Long callbackData);
    void ffi_marketdata_uniffi_rust_future_cancel_void(Long handle);
    void ffi_marketdata_uniffi_rust_future_free_void(Long handle);
    void ffi_marketdata_uniffi_rust_future_complete_void(Long handle, UniffiRustCallStatus uniffi_out_errmk);
    Short uniffi_marketdata_uniffi_checksum_func_new_rest_client_with_api_key();
    Short uniffi_marketdata_uniffi_checksum_func_new_rest_client_with_bearer_token();
    Short uniffi_marketdata_uniffi_checksum_func_new_rest_client_with_sdk_token();
    Short uniffi_marketdata_uniffi_checksum_func_new_websocket_client();
    Short uniffi_marketdata_uniffi_checksum_func_new_websocket_client_with_endpoint();
    Short uniffi_marketdata_uniffi_checksum_method_futoptclient_intraday();
    Short uniffi_marketdata_uniffi_checksum_method_futoptintradayclient_get_products();
    Short uniffi_marketdata_uniffi_checksum_method_futoptintradayclient_get_quote();
    Short uniffi_marketdata_uniffi_checksum_method_futoptintradayclient_get_ticker();
    Short uniffi_marketdata_uniffi_checksum_method_futoptintradayclient_products_sync();
    Short uniffi_marketdata_uniffi_checksum_method_futoptintradayclient_quote_sync();
    Short uniffi_marketdata_uniffi_checksum_method_futoptintradayclient_ticker_sync();
    Short uniffi_marketdata_uniffi_checksum_method_restclient_futopt();
    Short uniffi_marketdata_uniffi_checksum_method_restclient_stock();
    Short uniffi_marketdata_uniffi_checksum_method_stockclient_intraday();
    Short uniffi_marketdata_uniffi_checksum_method_stockintradayclient_candles_sync();
    Short uniffi_marketdata_uniffi_checksum_method_stockintradayclient_get_candles();
    Short uniffi_marketdata_uniffi_checksum_method_stockintradayclient_get_quote();
    Short uniffi_marketdata_uniffi_checksum_method_stockintradayclient_get_ticker();
    Short uniffi_marketdata_uniffi_checksum_method_stockintradayclient_get_trades();
    Short uniffi_marketdata_uniffi_checksum_method_stockintradayclient_get_volumes();
    Short uniffi_marketdata_uniffi_checksum_method_stockintradayclient_quote_sync();
    Short uniffi_marketdata_uniffi_checksum_method_stockintradayclient_ticker_sync();
    Short uniffi_marketdata_uniffi_checksum_method_stockintradayclient_trades_sync();
    Short uniffi_marketdata_uniffi_checksum_method_stockintradayclient_volumes_sync();
    Short uniffi_marketdata_uniffi_checksum_method_websocketclient_connect();
    Short uniffi_marketdata_uniffi_checksum_method_websocketclient_disconnect();
    Short uniffi_marketdata_uniffi_checksum_method_websocketclient_is_connected();
    Short uniffi_marketdata_uniffi_checksum_method_websocketclient_subscribe();
    Short uniffi_marketdata_uniffi_checksum_method_websocketclient_unsubscribe();
    Short uniffi_marketdata_uniffi_checksum_method_websocketlistener_on_connected();
    Short uniffi_marketdata_uniffi_checksum_method_websocketlistener_on_disconnected();
    Short uniffi_marketdata_uniffi_checksum_method_websocketlistener_on_message();
    Short uniffi_marketdata_uniffi_checksum_method_websocketlistener_on_error();
    Short uniffi_marketdata_uniffi_checksum_constructor_websocketclient_new();
    Short uniffi_marketdata_uniffi_checksum_constructor_websocketclient_new_with_endpoint();
    Integer ffi_marketdata_uniffi_uniffi_contract_version();
    
}

